--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
+<!DOCTYPE html>
+<head></head>
+<body>
 <div id="example1"></div>
-告诉PDFObject要嵌入的PDF以及嵌入它的位置
 
 <script src="/js/pdfobject.js"></script>
 <script>PDFObject.embed("Zhilan Fan-CV", "#example1");</script>
@@ -9,3 +11,5 @@
 .pdfobject-container { height: 500px;}
 .pdfobject { border: 1px solid #666; }
 </style>
+</body>
+</html>
