--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
 <div id="example1"></div>
 
-<script src="/js/pdfobject.js"></script>
+<script src="js/pdfobject.js"></script>
 <script>PDFObject.embed("Zhilan Fan-CV", "#example1");</script>
 3.您可以选择使用CSS来指定视觉样式，包括尺寸，边框，边距等。
 
