--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 <div id="example1"></div>
 
 <script src="js/pdfobject.js"></script>
-<script>PDFObject.embed("Zhilan Fan-CV", "#example1");</script>
-3.您可以选择使用CSS来指定视觉样式，包括尺寸，边框，边距等。
+<script>PDFObject.embed("Zhilan Fan-CV.pdf", "#example1");</script>
 
 <style>
 .pdfobject-container { height: 500px;}
