--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <script>PDFObject.embed("Zhilan Fan-CV.pdf", "#example1");</script>
 
 <style>
-.pdfobject-container { height: 500px;}
+.pdfobject-container { height: 100%;}
 .pdfobject { border: 1px solid #666; }
 </style>
 </body>
