--- a/index.html
+++ b/index.html
@@ -4,11 +4,16 @@
 <div id="example1"></div>
 
 <script src="js/pdfobject.js"></script>
-<script>PDFObject.embed("Zhilan Fan-CV.pdf", "#example1");</script>
+<script>PDFObject.embed("Zhilan Fan-CV.pdf", "#example1");
+if(PDFObject.supportsPDFs){
+    
+    } else {
+    alert("Boo, inline PDFs are not supported by this browser. Please change a browser!");
+    }</script>
 
 <style>
-/* .pdfobject-container { height: 100%;}
-.pdfobject { border: 1px solid #666; } */
+.pdfobject-container { height: 2000px;}
+.pdfobject { height: 2000px; border: 1px solid #666; }
 </style>
 </body>
 </html>
