give up PDFObeject.js

--- a/index.html
+++ b/index.html
@@ -1,19 +1,6 @@
 <!DOCTYPE html>
 <head></head>
 <body>
-<div id="example1"></div>
-
-<script src="js/pdfobject.js"></script>
-<script>PDFObject.embed("Zhilan Fan-CV.pdf", "#example1");
-if(PDFObject.supportsPDFs){
-    
-    } else {
-    alert("Boo, inline PDFs are not supported by this browser. Please change a browser!");
-    }</script>
-
-<style>
-.pdfobject-container { height: 2000px;}
-.pdfobject { height: 2000px; border: 1px solid #666; }
-</style>
+<a href="Zhilan Fan-CV.pdf">CV</a> 
 </body>
 </html>
