--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head></head>
 <body>
-<a href="Zhilan Fan-CV.pdf">CV</a> 
+<h1><a href="Zhilan Fan-CV.pdf">CV</a></h1>
 </body>
 </html>
